--- a/USPSC-pre-textual-IFSC.tex
+++ b/USPSC-pre-textual-IFSC.tex
@@ -21,8 +21,8 @@
 % dados complementares para CAPA e FOLHA DE ROSTO
 % ---
 \universidade{UNIVERSIDADE DE S\~AO PAULO}
-\titulo{Experimental Studies of the Muonic Component of Extensive Air Showers}
-\titleabstract{Estudos Experimentais da Componente Mu\^onica de Chuveiros Atmosf\'ericos Extensos}
+\titulo{Experimental studies of the muonic component of extensive air showers}
+\titleabstract{Estudos experimentais da componente mu\^onica de chuveiros atmosf\'ericos extensos}
 \autor{Raul Ribeiro Prado}
 \autorficha{Prado, R. R.}
 \autorabr{PRADO, R. R.}
@@ -54,8 +54,10 @@
 
 % DFA ==========================================================================
     \ifthenelse{\equal{#1}{DFA}}{
-     	\tipotrabalho{Thesis (Doctorate in Science)}
+     	\tipotrabalho{Thesis (Doctor in Science)}
         \area{Basic Physics}
+  	\tipotrabalhopt{Tese (Doutor em Ci\^encias)}
+        \areapt{F\'isica B\'asica}
 		%\opcao{Nome da Opção}
         % O preambulo deve conter o tipo do trabalho, o objetivo, 
 		% o nome da instituição, a área de concentração e opção quando houver
@@ -74,7 +76,7 @@
         }{
 % DFAFC ==========================================================================
     \ifthenelse{\equal{#1}{DFAFC}}{
-     	\tipotrabalho{Tese (Doutorado em Ci\^encias)}
+     	\tipotrabalho{Tese (Doutor em Ci\^encias)}
         \area{F\'isica Aplicada}
         \opcao{F\'isica Computacional}
         % O preambulo deve conter o tipo do trabalho, o objetivo, 
