--- a/hadron.tex
+++ b/hadron.tex
@@ -352,6 +352,7 @@ the event selection for the data and simulation sets.
       \DPMJetLong                   & 3.89$\times10^6$     & 3.46$\times10^6$ \\
       \QGSJetLong                   & 3.56$\times10^6$     & 2.95$\times10^6$ \\ \hline
     \end{tabular}
+    \small Source: By the author. 
   \end{center}
 \end{table}
 
@@ -1422,6 +1423,9 @@ in~\cref{fig:hadron:dedx:fit:out158r,fig:hadron:dedx:fit:out158w,fig:hadron:dedx
     colors show particle types and negatively (positively) charged particles are shown
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:final158r}
+  \begin{center}
+    \small Source: By the author. 
+  \end{center}
 \end{figure}
 
 \clearpage
@@ -1482,6 +1486,7 @@ the signal extraction results in~\cref{sec:hadron:vzero:results}.
       \kzeros          & 0.4976 & $\pi^+$+$\pi^-$      & 69.2$\%$  \\ \hline
     \end{tabular}
     \label{tab:hadron:vzero:part}
+    \small Source: By the author. 
   \end{center}
 \end{table}
 
@@ -2010,7 +2015,8 @@ on the systematic uncertainties in~\cref{sec:hadron:spec:syst}.
       Average     & 0.897     & 0.771 \\ \hline
     \end{tabular}
     \label{tab:hadron:alpha}
-  \end{center}
+    \small Source: By the author. 
+\end{center}
 \end{table}
 
 The $\beta$ factor for \pions, \kaons and \protonpm
