--- a/main.tex
+++ b/main.tex
@@ -155,7 +155,7 @@
 % Quando estiver com o documento, salve-o como PDF no diretório
 % do seu projeto como fichacatalografica.pdf e iclua o arquivo
 % utilizando o comando abaixo:
-%\includepdf{USPSC-Tese-pre-textual/fichacatalografica.pdf} 
+%\includepdf{fichacatalografica.pdf} 
 % Se você optar por elaborar a ficha catalográfica, deverá 
 % incluir uma % antes da linha % antes
 % do comando \include{USPSC-Tese-pre-textual/USPSC-fichacatalografica} 
