--- a/resumo.tex
+++ b/resumo.tex
@@ -10,7 +10,7 @@
 			\imprimirautorabr~ ~\textbf{\imprimirtitleabstract}. \imprimirdata. \pageref{LastPage}p. 
 			%Substitua p. por f. quando utilizar oneside em \documentclass
 			%\pageref{LastPage}f.
-			\imprimirtipotrabalho~-~\imprimirinstituicao, \imprimirlocal, \imprimirdata. 
+			\imprimirtipotrabalhopt~-~\imprimirinstituicao, \imprimirlocal, \imprimirdata. 
  	\end{flushleft}
         \OnehalfSpacing 			
 
