--- a/showers.tex
+++ b/showers.tex
@@ -273,7 +273,7 @@ occur at energies of order of $\sim 100 \GeV$.
     Plot reproduced from Ref.~\cite{\IoanaICRC}}
   \label{fig:shower:phen:ioana}
   \begin{center}
-    \small Source: MARI\c{S}.~\cite{\IoanaICRC} 
+    \small \ Source: MARI\c{S}.~\cite{\IoanaICRC} 
   \end{center}
 \end{wrapfigure}
 
@@ -334,7 +334,7 @@ and after a certain atmospheric depth, only the muonic component survives to the
     level of 875 g/cm$^2$ with energy above 1 \GeV.}
   \label{fig:shower:phen:nmu}
   \begin{center}
-    \small Source: By the author. 
+    \small \ Source: By the author. 
   \end{center}
 \end{wrapfigure}
 
