--- a/USPSC-pre-textual-IFSC.tex
+++ b/USPSC-pre-textual-IFSC.tex
@@ -59,7 +59,7 @@
 		%\opcao{Nome da Opção}
         % O preambulo deve conter o tipo do trabalho, o objetivo, 
 		% o nome da instituição, a área de concentração e opção quando houver
-		\preambulo{Thesis submitted to the Physics Graduate Program at the SÃ£o Carlos Institute of Physics, University of SÃ£o Paulo, to obtain the degree of Doctor of Sciences}
+		\preambulo{Thesis presented to the Graduate Program in Physics at the Instituto de F\'isica de S\~ao Carlos, Universidade de S\~ao Paulo, to obtain the degree of Doctor of Sciences}
 		\notaficha{Thesis (Doctorate - Graduate Program in Basic Physics)}
     }{
 % MFA ===========================================================================
