--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -7,10 +7,10 @@
 
   I am very grateful to:
   \begin{itemize}
-  \item My advisor Prof. Vitor de Souza for all the guidance along over 9 years of my science journey.
-  \item My colleagues and friends from the Astroparticle Physics group at IFSC for providing a great and fun working environment along all these years. I would like to thank specially Rodrigo L. and Luan A. for reviewing this thesis.  
+  \item My advisor Prof. Vitor de Souza for all the guidance along more than 9 years.
+  \item My colleagues and friends from the Astroparticle Physics group at IFSC for providing a great and fun working environment along all these years. I would like to thank specially Rodrigo G. L. and Luan A. for helping to review this thesis.  
   \item The LIP group (specially Prof. Mário Pimenta and Ruben Conceição) and the KIT group (specially Michael Unger, Alex Herve and Darko Veberic) for the great reception and collaboration. 
-  \item All my friends, specially Jessica D., Natália K.B., Thiago M.A., Milena C., Rodrigo G.L., Guilherme T., Edmilson R.S., Diogo L.B., Pedro I.B., André M., Gilson C., David S., Darko V..   
+  \item All my friends, specially Jessica Dipold, Natália K. Bellini, Thiago M. Amaral, Milena Carvalho, Rodrigo G. Lang, Guilherme Tomishiyo, Edmilson Roque, Diogo L. Barreto, Thiago Mosqueiro, Pedro I. Batista, André H. A. Malavazi, César Uliana, Gilson Campani Jr., David Schmidt and Darko Veberic, for the essential support.   
   \item FAPESP, for the financial support (grant No. 2014/10460-1 and 2016/12735-3).
   \end{itemize}
 
