--- a/introduction.tex
+++ b/introduction.tex
@@ -37,7 +37,7 @@ and in particular, the actual nature of the ankle and the suppression is still
 a matter of discussions.
 
 Measuring the properties of UHECR is the main goal of the largest
-cosmic ray experiment even built, the Pierre Auger Observatory,
+cosmic ray experiment ever built, the Pierre Auger Observatory,
 located in Malargue, Argentina, and operating since 2004.~\cite{\AugerPaper}
 While its large collecting area (3000 km$^2$) guarantee a large
 event statistics, its hybrid detection system that includes
@@ -84,9 +84,9 @@ of this thesis. \newline
 
 In this thesis, the problem of describing the properties of the muonic component of EAS
 by simulations is approached from an experimental perspective by three different fronts.
-The first one is presented in~\cref{sec:interpretation}
+The first one is presented in~\cref{sec:interpretation},
 where the Ref.~\cite{Prado:2016akv} is reproduced,
-consists of the development of a method to interpret the energy evolution
+and it consists of the development of a method to interpret the energy evolution
 of the measured \nmu moments in terms of mass composition which takes into account
 the misprediction of the \nmu by the simulations. The method is tested by using
 a set of simulations and it is expected to be applicable for the analysis
