--- a/lib.bib
+++ b/lib.bib
@@ -65,7 +65,7 @@
 @article{Aloisio:2017ooo,
       author         = "Aloisio, Roberto and Blasi, Pasquale and De Mitri, Ivan
                         and Petrera, Sergio",
-      title          = "{Selected topics in cosmic ray physics}",
+      title          = "{\textbf{Selected topics in cosmic ray physics}}",
       year           = "2017",
       eprint         = "1707.06147",
       archivePrefix  = "arXiv",
@@ -221,7 +221,7 @@ doi = {10.1143/PTPS.6.93}
 
 @article{Aab:2016vlz,
       author         = "Aab, Alexander and others",
-      title          = "{The Pierre Auger Observatory upgrade - preliminary
+      title          = "{\textbf{The Pierre Auger Observatory upgrade} - preliminary
                         design report}",
       collaboration  = "Pierre Auger",
       year           = "2016",
@@ -320,7 +320,7 @@ doi = {10.1143/PTPS.6.93}
 
 @article{Abreu:2017vsj,
       author         = "Abreu, P. and others",
-      title          = "{MARTA: A high-energy cosmic-ray detector concept with
+      title          = "{\textbf{MARTA:} A high-energy cosmic-ray detector concept with
                         high-accuracy muon measurement}",
       year           = "2017",
       eprint         = "1712.07685",
@@ -966,7 +966,7 @@ year = {1961}
       title          = "The Relation of the Lateral Distribution of Cherenkov
                         Light from Cosmic Ray Showers to the Distance of Maximum
                         Development",
-      journal        = "J. Phys.",
+      journal        = "Journal of Physics",
       volume         = "G9",
       year           = "1983",
       pages          = "1433-1452",
@@ -994,7 +994,7 @@ year = {1961}
       author         = "Nelson, W. Ralph and Hirayama, H. and Rogers, David W.
                         O.",
       title          = "{\textbf{The EGS4 code system}}",
-      note   = "SLAC, 1985. SLAC-265. Available from: \href{http://www.slac.stanford.edu/cgi-wrap/getdoc/slac-r-265.pdf}{http://www.slac.stanford.edu/cgi-wrap/getdoc/slac-r-265.pdf}. Accessed in: 7 Mar. 2018."
+      note   = "SLAC, 1985. SLAC-265. Available from: \href{http://www.slac.stanford.edu/cgi-wrap/getdoc/slac-r-265.pdf}{<http://www.slac.stanford.edu/cgi-wrap/getdoc/slac-r-265.pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 
@@ -1069,7 +1069,7 @@ year = {1968}
                         and Ranft, Johannes",
       title          = "{\textbf{FLUKA: A multi-particle transport code (Program version
                         2005)}}",
-      note = "CERN, 2005. CERN-2005-010, SLAC-R-773, INFN-TC-05-11. Available from: \href{http://cds.cern.ch/record/898301/files/CERN-2005-010.pdf}{http://cds.cern.ch/record/898301/files/CERN-2005-010.pdf}. Accessed in: 7 Mar. 2018."
+      note = "CERN, 2005. CERN-2005-010, SLAC-R-773, INFN-TC-05-11. Available from: \href{http://cds.cern.ch/record/898301/files/CERN-2005-010.pdf}{<http://cds.cern.ch/record/898301/files/CERN-2005-010.pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 @article{Bleicher:1999xi,
@@ -1161,7 +1161,7 @@ year = {1968}
       address = "The Hague, The Netherlands",
       publisher = {ICRC},
       year           = "2015",
-      note = "Available from: \href{https://pos.sissa.it/236/337/pdf}{https://pos.sissa.it/236/337/pdf}. Accessed in: 7 Mar. 2018."
+      note = "Available from: \href{https://pos.sissa.it/236/337/pdf}{<https://pos.sissa.it/236/337/pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 
@@ -1203,13 +1203,13 @@ year = {1968}
                         Capdevielle, J. N.",
       title          = "{\textbf{CORSIKA: A Monte Carlo code to simulate extensive air
                         showers}}",
-      note   = "Forschungszentrum Karlsruhe, 1998. FZKA-6019. Available from: \href{http://digbib.ubka.uni-karlsruhe.de/volltexte/fzk/6019/6019.pdf}{http://digbib.ubka.uni-karlsruhe.de/volltexte/fzk/6019/6019.pdf}. Accessed in: 7 Mar. 2018."
+      note   = "Forschungszentrum Karlsruhe, 1998. FZKA-6019. Available from: \href{http://digbib.ubka.uni-karlsruhe.de/volltexte/fzk/6019/6019.pdf}{<http://digbib.ubka.uni-karlsruhe.de/volltexte/fzk/6019/6019.pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 
 @article{Sciutto:1999jh,
       author         = "Sciutto, S. J.",
-      title          = "{AIRES: A System for air shower simulations. User's guide
+      title          = "{\textbf{AIRES:} A System for air shower simulations. User's guide
                         and reference manual. Version 2.2.0}",
       year           = "1999",
       eprint         = "astro-ph/9911331",
@@ -1309,7 +1309,7 @@ year = {1968}
                         Calorimetry in High Energy Physics (CALOR 2012): Santa Fe,
                         New Mexico, USA, June 4-8, 2012}",
       collaboration  = "Telescope Array",
-      journal        = "Journal of Physics: Conference Series",
+      journal        = "Journal of Physics: \normalfont{Conference Series}",
       volume         = "404",
       year           = "2012",
       pages          = "012037",
@@ -1337,19 +1337,22 @@ year = {1968}
       SLACcitation   = "%%CITATION = ASTRO-PH/0003190;%%"
 }
 
-@inproceedings{Knurenko:2010eu,
+@article{Knurenko:2010eu,
       author         = "Knurenko, S. P. and Sabourov, A.",
       title          = "{The depth of maximum shower development and its
                         fluctuations: cosmic ray mass composition at $E_0 >= 10^{17}$ eV}",
-      booktitle      = "{22nd European Cosmic Ray Symposium}",
-      address = "Turku, Finland",
-      publisher = "ECRS",
+      journal = "Astrophysics and Space Sciences Transactions",
+      volume = "7",
+      pages = "251--255",
       year           = "2010",
       doi            = "10.5194/astra-7-251-2011",
       eprint         = "1010.1185",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.HE",
       SLACcitation   = "%%CITATION = ARXIV:1010.1185;%%"
+      %booktitle      = "{22nd European Cosmic Ray Symposium}",
+      %address = "Turku, Finland",
+      %publisher = "ECRS",
 }
 
 @article{Knurenko:2011zz,
@@ -1602,8 +1605,8 @@ year = {1968}
 @article{Calcagni:2017tws,
       author         = "Calcagni, L. and Canal, C. A. García and Sciutto, S. J.
                         and Tarutina, T.",
-      title          = "{LHC updated hadronic interaction packages analysed up to
-                        cosmic-ray energies}",
+      title          = "{\textbf{LHC updated hadronic interaction packages analysed up to
+                        cosmic-ray energies}}",
       year           = "2017",
       eprint         = "1711.04723",
       archivePrefix  = "arXiv",
@@ -1630,8 +1633,8 @@ year = {1968}
 
 @article{Karbach:2012vg,
       author         = "Karbach, Till Moritz and Schlupp, Maximilian",
-      title          = "Constraints on Yield Parameters in Extended Maximum
-                        Likelihood Fits",
+      title          = "{\textbf{Constraints on Yield Parameters in Extended Maximum
+                        Likelihood Fits}}",
       year           = "2012",
       eprint         = "1210.7141",
       archivePrefix  = "arXiv",
@@ -1900,7 +1903,7 @@ year = {1968}
 @article{Abgrall:2008zz,
       author         = "Abgrall, N. and others",
       title          = "{\textbf{Calibration and analysis of the 2007 data}}",
-      note   = "CERN, 2008. CERN-SPSC-2008-018, CERN-SPSC-SR-033. Available from: \href{https://cds.cern.ch/record/1113279/files/SPSC-SR-033.pdf}{https://cds.cern.ch/record/1113279/files/SPSC-SR-033.pdf}. Accessed in: 7 Mar. 2018.",
+      note   = "CERN, 2008. CERN-SPSC-2008-018, CERN-SPSC-SR-033. Available from: \href{https://cds.cern.ch/record/1113279/files/SPSC-SR-033.pdf}{<https://cds.cern.ch/record/1113279/files/SPSC-SR-033.pdf>}. Accessible in: 7 Mar. 2018.",
       SLACcitation   = "%%CITATION = CERN-SPSC-2008-018;%%"
 }
 
@@ -2280,7 +2283,7 @@ experiment and their relevance for air shower simulations}",
       address = "L\'{o}d\'{z}, Poland",
       publisher = {ICRC},
       year           = "2009",
-      note = "Available from: \href{http://icrc2009.uni.lodz.pl/proc/pdf/icrc1095.pdf}{http://icrc2009.uni.lodz.pl/proc/pdf/icrc1095.pdf}. Accessed in: 7 Mar. 2018."
+      note = "Available from: \href{http://icrc2009.uni.lodz.pl/proc/pdf/icrc1095.pdf}{<http://icrc2009.uni.lodz.pl/proc/pdf/icrc1095.pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 @inproceedings{UngerICRC2011,
@@ -2291,7 +2294,7 @@ experiment and their relevance for air shower simulations}",
       address = "Beijing, China",
       publisher = {ICRC},
       year           = "2011",
-      note = "Available from: \href{http://www.ihep.ac.cn/english/conference/icrc2011/paper/proc/v5/v5$\_$1094.pdf}{http://www.ihep.ac.cn/english/conference/icrc2011/paper/proc/v5/v5$\_$1094.pdf}. Accessed in: 7 Mar. 2018."
+      note = "Available from: \href{http://www.ihep.ac.cn/english/conference/icrc2011/paper/proc/v5/v5$\_$1094.pdf}{<http://www.ihep.ac.cn/english/conference/icrc2011/paper/proc/v5/v5$\_$1094.pdf>}. Accessible at: 7 Mar. 2018."
 }
 
 @inproceedings{HansICRC2013,
@@ -2302,7 +2305,7 @@ experiment and their relevance for air shower simulations}",
       address = "Rio de Janeiro, Brazil",
       publisher = {ICRC},
       year           = "2013",
-      note = "Available from: \href{http://www.cbpf.br/~icrc2013/papers/icrc2013-0688.pdf}{http://www.cbpf.br/~icrc2013/papers/icrc2013-0688.pdf}. Accessed in: 7 Mar. 2018."
+      note = "Available from: \href{http://www.cbpf.br/~icrc2013/papers/icrc2013-0688.pdf}{<http://www.cbpf.br/~icrc2013/papers/icrc2013-0688.pdf>}. Accessed in: 7 Mar. 2018."
 
 }
 
@@ -2447,7 +2450,7 @@ showers and fixed target accelerator data}",
 
 @book{GaisserBook,
   author       = "Gaisser, T.K. and Engel, R. and Resconi, E.", 
-  title        = "Cosmic Rays and Particle Physics",
+  title        = "Cosmic rays and particle physics",
   publisher    = "Cambridge University Press",
   year         = "2016"
   address      = "Cambridge, United Kingdom",
@@ -2456,7 +2459,7 @@ showers and fixed target accelerator data}",
 
 @book{GriederBook,
   author       = "Grieder, P. K. F.", 
-  title        = "Extensive Air Showers",
+  title        = "Extensive air showers",
   publisher    = "Springer Verlag",
   year         = "2010"
   address      = "Berlin",
@@ -2470,6 +2473,6 @@ showers and fixed target accelerator data}",
 @misc{CRMC,
   author       = "Pierog, T. and Baus, C. and Ulrich, R.",
   title        = "CRMC (Cosmic Ray Monte Carlo package)",
-  url          = "https://web.ikp.kit.edu/rulrich/crmc.html"
+  note          = "Available from: \href{https://web.ikp.kit.edu/rulrich/crmc.html}{<https://web.ikp.kit.edu/rulrich/crmc.html>}. Accessible at: 7 Mar. 2018."
 }
 
