--- a/uhecr.tex
+++ b/uhecr.tex
@@ -379,10 +379,13 @@ electron pair production or photopion production at all the energies.
 Because of photodisintegration, the resultant effect of the propagation of a
 combination of different nuclei on the energy spectrum
 turns to be more complicated to evaluate than in the proton case. However,
-it is possible to show that, for example, in the simple case of pure iron nuclei being
-originated at the sources, the energy spectrum would also suffer a suppression at the highest energies,
-mainly due to photodisintegration effects. This suppression would be very similar to
-the one expected due to the GZK effect and also to the one which is actually observed.
+it is possible to show that for a mixed composition case,
+the energy spectrum would also suffer a suppression at the highest energies,
+mainly due to photodisintegration effects for heavy nuclei and photopion production for the light ones.
+This suppression can also be considered to be a manifestation of the above mentioned GZK suppression,
+since it would be a consequence of the propagation effects of cosmic ray particles.  
+
+
 Concerning the other spectrum feature, the ankle, it is not possible to reproduce it
 by considering nuclei propagation, instead of proton. The alternative explanation
 for the ankle in the non-pure proton case is the effect of the
@@ -472,9 +475,9 @@ have proven it wrong.~\cite{\AugerXmaxPRLPaper}
 
 Concerning the suppression, the two currently most considered hypothesis
 to explain it are the GZK effect (see~\cref{sec:uhecr:overview:propagation})
-and the limit of the acceleration power by the sources. While the GZK hypothesis
-require a composition dominated by protons at the highest energies, the source limit
-would imply in a rigidity dependent suppression and consequently an increasingly heavier
+and the limit of the acceleration power by the sources. While in the GZK hypothesis
+the composition can be either pure proton or mixed,
+the source limit hypothesis imply in a rigidity dependent suppression and consequently an increasingly heavier
 composition as the energy increases. Similarly to what happened to the dip model
 interpretation of the ankle, the composition measurements by HiRes
 supported the GZK hypothesis for many years,
@@ -486,11 +489,13 @@ literature.~\cite{Allard:2005cx,Aloisio:2011fv,Biermann:2011wf,Unger:2015laa,Glo
 Two features are common to nearly all the recent models that are constrained by the
 Auger \xmax measurements: the exact energy of the galactic-to-extragalactic transition
 (the energy in which both fluxes become equivalent) is around $1-3 \times \E{18}$
-and the suppression is caused by a rigidity dependent cutoff due to the limit
-of the acceleration power of the sources. 
-The absence of the GZK effect and its negative consequences
-(e.g. the absence of correlation with nearby sources due to the deflection of
-heavy nuclei in magnetic fields) have motivated the author of Ref.~\cite{Aloisio:2011fv}
+and the suppression is mainly caused by a rigidity dependent cutoff due to the limit
+of the acceleration power of the sources.
+The observed mixed composition at the suppression energies and the confirmation 
+that the suppression is not caused only by GZK effect with a pure proton composition  
+has negative consequences, like the absence of correlation with nearby sources due to the deflection of
+heavy nuclei in magnetic fields and the absence of the GZK horizon.
+Those facts motivated the authors of Ref.~\cite{Aloisio:2011fv}
 to call this generic scenario of \emph{disappointing model}.
 
 In a recent analysis done by Pierre Auger Collaboration,
@@ -562,7 +567,7 @@ can be found in Ref.~\cite{\AugerPaper}.
     red dots. The blue circle show the approximate area of the AERA setup.}
   \label{fig:uhecr:auger:array}
   \begin{center}
-    \small SOURCE: STREICH.~\cite{AlexThesis}
+    \small Source: STREICH.~\cite{AlexThesis}
   \end{center}
     
 \end{figure}
