versao para deposito

--- a/lib.bib
+++ b/lib.bib
@@ -2222,6 +2222,7 @@ the Pierre Auger Observatory}",
 
 @inproceedings{HillasThinning1,
       author         = "Hillas, A.M.",
+      title = "Two interesting techniques for Monte-Carlo simulation of very high energy hadron cascades",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 17, ICRC, 1981}. \textbf{Proceedings...}},
       address = "Paris, France",
       publisher = {ICRC},
