--- a/showers.tex
+++ b/showers.tex
@@ -404,7 +404,7 @@ This class of software includes \Mooca~\cite{\MoocaPaper},
 \Aires~\cite{\AiresPaper} and \Corsika~\cite{\CorsikaPaper},
 being the latter the one used in this thesis.
 To reduce the computing time, an algorithm called \emph{statistical thinning}
-is usually applied.~\cite{HillasThinning1,HillasThinning2}
+is usually applied.~\cite{HillasThinning1,Hillas:1997tf}
 Instead of following all the particles, by using the
 thinning algorithm only a number of them are selected
 to be followed and a weight is given to these particles
